---------------------------------------------------------------------------------------------------
Version: 1.0.11
Date: ????
  Bugfixes:
    - Fixed that fractional research unit counts would be displayed with too much precision (#6)
---------------------------------------------------------------------------------------------------
Version: 1.0.10
Date: 2023-03-20
  Bugfixes:
    - Fixed that tooltips would not update the cost of technologies (#4)
---------------------------------------------------------------------------------------------------
Version: 1.0.9
Date: 2023-03-10
  Bugfixes:
    - Fixed that technologies could be insta-researched when in the Space Exploration navsat view
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2023-03-09
  Bugfixes:
    - Fixed that hidden technologies would be visible when researched (#1)
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2023-01-30
  Bugfixes:
    - Fixed that technology slot tooltips would only show the base unit count for multilevel techs
    - Fixed that the GUI would not refresh if the player's force is changed
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2023-01-14
  Bugfixes:
    - Fixed that queueing to the front would remove the active research from the queue
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2023-01-10
  Bugfixes:
    - Fixed that a technology's descendants would be removed when research was completed
    - Fixed that multi-level technology tooltips did not update when the level changed
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2022-12-30
  Changes: