@@ -3,6 +3,7 @@ Version: 1.0.11
 Date: ????
   Bugfixes:
     - Fixed that fractional research unit counts would be displayed with too much precision (#6)
+    - Fixed that lower levels of a multi-level tech would not be moved when queuing to the front
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.10
 Date: 2023-03-20
